
2019-09-29  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, reserved.c: added detection of OS/VS-era I/O extensions.
	* parser.y: added ASSIGN VARYING variant of ASSIGN USING.
	* reserved.c (lookup_reserved_word): allow SELECT and I-O-CONTROL to
	  have multiple context-sensitive words occur in one sentence.
	* config.def: clarified -fline-col-zero-default.

2019-09-28  Ron Norman <rjn@inglenet.com>

	* typeck.c: If MOVE "literal" is all SPACES then process as
	            cb_space so MOVE SPACE & MOVE "   " are identical

2019-09-27  Ron Norman <rjn@inglenet.com>

	* typeck.c: Check for reference modification when using literals

2019-09-26  Ron Norman <rjn@inglenet.com>

	* libcob/sysdefines.h: New header to keep system dependent #defines
	* cob.c,cob.hi,codegen.c: Uses sysdefines.h

2019-09-26  Ron Norman <rjn@inglenet.com>

	* typeck.c: Compile time checking of reference modification
	           is now based on reference-bounds-check config option

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved alignment defines from libcob/common.h here
	* cobc.h: moved alignment exception for hpux from libcob/common.h here
	* codeoptim.c, cobc.h: generate the actual requested code w/o the attribute
	  __unaligned instead of overriding the attribute in the header
	* tree.h: removed duplicate redefinition of atol/atoll

2019-09-22  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix logic error in output_field_display

2019-09-22  Ron Norman <rjn@inglenet.com>

	* parser.y: Fixed 'integer' to allow signed values in report
	           for example  COLUMN +2 vs COLUMN 2
		   when -std=xxxx has report-column-plus: yes
	* codegen.c,field.c: Corrections to handling of COLUMN
	           With OCCURS COLUMN +num is no longer an alternative for STEP

2019-09-15  Ron Norman <rjn@inglenet.com>

	* cobc.h: For HPUX set COB_ALLOW_UNALIGNED as undefined
	* typeck.c: Emit ADD/SUBTRACT shortcut for COMP-5 only
	            if COB_ALLOW_UNALIGNED defined