@@ -34,14 +34,12 @@
 reserved:	ABSENT
 reserved:	ACCEPT
 reserved:	ACCESS
-reserved:	ACQUIRE
 reserved:	ACTUAL
 reserved:	ADD
 reserved:	ADDRESS
 reserved:	ADVANCING
 reserved:	AFTER
 reserved:	ALL
-reserved:	ALLOWING
 reserved:	ALPHABET
 reserved:	ALPHABETIC
 reserved:	ALPHABETIC-LOWER
@@ -68,27 +66,17 @@ reserved:	AUTHOR
 reserved:	AUTO
 reserved:	AUTO-SKIP=AUTO
 reserved:	AUTOMATIC
-reserved:	B-AND
-reserved:	B-EXOR
-reserved:	B-LESS
-reserved:	B-NOT
-reserved:	B-OR
-reserved:	B-XOR
 reserved:	BACKGROUND-COLOR
 reserved:	BACKGROUND-COLOUR=BACKGROUND-COLOR
-reserved:	BACKWARD
 reserved:	BASIS
 reserved:	BEEP=BELL
 reserved:	BEFORE
 reserved:	BEGINNING
 reserved:	BELL
 reserved:	BINARY
-reserved:	BIT
-reserved:	BITS
 reserved:	BLANK
 reserved:	BLINK
 reserved:	BLOCK
-reserved:	BOOLEAN
 reserved:	BOTTOM
 reserved:	BY
 reserved:	CALL
@@ -97,8 +85,6 @@ reserved:	CBL
 reserved:	CD
 reserved:	CF
 reserved:	CH
-reserved:	CHAIN
-reserved:	CHAINING
 reserved:	CHANGED
 reserved:	CHARACTER
 reserved:	CHARACTERS
@@ -106,18 +92,15 @@ reserved:	CLASS
 reserved:	CLASS-ID
 reserved:	CLOCK-UNITS
 reserved:	CLOSE
-reserved:	COBOL
 reserved:	CODE
 reserved:	CODE-SET
 reserved:	COLS
 reserved:	COLLATING
-reserved:	COLOR
 reserved:	COLUMN
 reserved:	COM-REG
 reserved:	COMMA
 reserved:	COMMAND-LINE
 reserved:	COMMIT
-reserved:	COMMITMENT
 reserved:	COMMON
 reserved:	COMMUNICATION
 reserved:	COMP
@@ -127,34 +110,19 @@ reserved:	COMP-2
 reserved:	COMP-3
 reserved:	COMP-4
 reserved:	COMP-5
-reserved:	COMP-6
-reserved:	COMP-7
-reserved:	COMP-8
-reserved:	COMP-9
-reserved:	COMP-X
 reserved:	COMPUTATIONAL
-reserved:	COMPUTATIONAL-0
 reserved:	COMPUTATIONAL-1
 reserved:	COMPUTATIONAL-2
 reserved:	COMPUTATIONAL-3
 reserved:	COMPUTATIONAL-4
 reserved:	COMPUTATIONAL-5
-reserved:	COMPUTATIONAL-6
-reserved:	COMPUTATIONAL-7
-reserved:	COMPUTATIONAL-8
-reserved:	COMPUTATIONAL-9
-reserved:	COMPUTATIONAL-X
 reserved:	COMPUTE
 reserved:	CONFIGURATION
-reserved:	CONNECT
-reserved:	CONTAINED
 reserved:	CONTAINS
 reserved:	CONTENT
 reserved:	CONTINUE
 reserved:	CONTROL
-reserved:	CONTROL-AREAS
 reserved:	CONTROLS
-reserved:	CONVERSION
 reserved:	CONVERTING
 reserved:	COPY
 reserved:	CORE-INDEX
@@ -165,26 +133,14 @@ reserved:	CRT
 reserved:	CRT-UNDER
 reserved:	CSP
 reserved:	CURRENCY
-reserved:	CURRENT
 reserved:	CURRENT-DATE
 reserved:	CURSOR
-reserved:	CYCLE
-reserved:	CYL-INDEX
-reserved:	CYL-OVERFLOW
 reserved:	DATA
 reserved:	DATE
 reserved:	DATE-COMPILED
 reserved:	DATE-WRITTEN
 reserved:	DAY
 reserved:	DAY-OF-WEEK
-reserved:	DB
-reserved:	DB-ACCESS-CONTROL-KEY
-reserved:	DB-DATA-NAME
-reserved:	DB-EXCEPTION
-reserved:	DB-FORMAT-NAME
-reserved:	DB-RECORD-NAME
-reserved:	DB-SET-NAME
-reserved:	DB-STATUS
 reserved:	DBCS
 reserved:	DE
 reserved:	DEBUG
@@ -195,49 +151,32 @@ reserved:	DEBUG-NAME
 reserved:	DEBUG-SUB-1
 reserved:	DEBUG-SUB-2
 reserved:	DEBUG-SUB-3
-reserved:	DEBUG-SUB-N
 reserved:	DEBUGGING
 reserved:	DECIMAL-POINT
 reserved:	DECLARATIVES
-reserved:	DEFAULT
 reserved:	DELETE
 reserved:	DELIMITED
 reserved:	DELIMITER
 reserved:	DEPENDING
-reserved:	DEPTH
 reserved:	DESCENDING
 reserved:	DESTINATION
 reserved:	DETAIL
 reserved:	DISABLE
-reserved:	DISCONNECT
 reserved:	DISK
 reserved:	DISP
 reserved:	DISPLAY
-reserved:	DISPLAY-0
 reserved:	DISPLAY-1
-reserved:	DISPLAY-2
-reserved:	DISPLAY-3
-reserved:	DISPLAY-4
-reserved:	DISPLAY-5
-reserved:	DISPLAY-6
-reserved:	DISPLAY-7
-reserved:	DISPLAY-8
-reserved:	DISPLAY-9
-reserved:	DISPLAY-S
+reserved:	DISPLAY-ST
 reserved:	DIVIDE
 reserved:	DIVISION
 reserved:	DOWN
-reserved:	DROP
-reserved:	DUPLICATE
 reserved:	DUPLICATES
 reserved:	DYNAMIC
-reserved:	EBCDIC
 reserved:	EGC
 reserved:	EGI
 reserved:	EJECT
 reserved:	ELSE
 reserved:	EMI
-reserved:	EMPTY
 reserved:	EMPTY-CHECK=REQUIRED
 reserved:	ENABLE
 reserved:	END
@@ -247,7 +186,6 @@ reserved:	END-CALL
 reserved:	END-COMPUTE
 reserved:	END-DELETE
 reserved:	END-DISABLE
-reserved:	END-DISPLAY
 reserved:	END-DIVIDE
 reserved:	END-ENABLE
 reserved:	END-EVALUATE
@@ -267,7 +205,6 @@ reserved:	END-SET
 reserved:	END-START
 reserved:	END-STRING
 reserved:	END-SUBTRACT
-reserved:	END-TRANSCEIVE
 reserved:	END-UNSTRING
 reserved:	END-WRITE
 reserved:	ENDING
@@ -276,55 +213,35 @@ reserved:	ENTRY
 reserved:	ENVIRONMENT
 reserved:	ENVIRONMENT-NAME
 reserved:	ENVIRONMENT-VALUE
-reserved:	EOL
 reserved:	EOP
-reserved:	EOS
 reserved:	EQUAL
-reserved:	EQUALS=EQUAL
 reserved:	ERASE
 reserved:	ERROR
 reserved:	ESCAPE
 reserved:	ESI
 reserved:	EVALUATE
 reserved:	EVERY
-reserved:	EXACT
 reserved:	EXAMINE
-reserved:	EXCEED
 reserved:	EXCEPTION
-reserved:	EXCEPTION-OBJECT
-reserved:	EXCESS
 reserved:	EXCLUSIVE
-reserved:	EXEC
-reserved:	EXECUTE
 reserved:	EXHIBIT
 reserved:	EXIT
 reserved:	EXTEND
-reserved:	EXTENDED-SEARCH
 reserved:	EXTERNAL
-reserved:	EXTERNALLY-DESCRIBED-KEY
-reserved:	FACTORY
 reserved:	FALSE
 reserved:	FD
-reserved:	FETCH
 reserved:	FIELD-TERMINATOR
 reserved:	FILE
 reserved:	FILE-CONTROL
-reserved:	FILE-ID
 reserved:	FILE-LIMIT
 reserved:	FILE-LIMITS
-reserved:	FILES
 reserved:	FILLER
 reserved:	FINAL
-reserved:	FIND
-reserved:	FINISH
 reserved:	FIRST
-reserved:	FIXED
 reserved:	FOOTING
 reserved:	FOR
 reserved:	FOREGROUND-COLOR
 reserved:	FOREGROUND-COLOUR=FOREGROUND-COLOR
-reserved:	FORM
-reserved:	FORMAT
 reserved:	FREE
 reserved:	FROM
 reserved:	FULL
@@ -348,21 +265,8 @@ reserved:	IDENTIFICATION
 reserved:	IF
 reserved:	IN
 reserved:	INDEX
-reserved:	INDEX-0
-reserved:	INDEX-1
-reserved:	INDEX-2
-reserved:	INDEX-3
-reserved:	INDEX-4
-reserved:	INDEX-5
-reserved:	INDEX-6
-reserved:	INDEX-7
-reserved:	INDEX-8
-reserved:	INDEX-9
 reserved:	INDEXED
-reserved:	INDIC
 reserved:	INDICATE
-reserved:	INDICATORS
-reserved:	INDICATOR
 reserved:	INHERITS
 reserved:	INITIAL
 reserved:	INITIALIZE
@@ -376,18 +280,13 @@ reserved:	INTO
 reserved:	INVALID
 reserved:	INVOKE
 reserved:	IS
-reserved:	JAPANESE
 reserved:	JUST
 reserved:	JUSTIFIED
 reserved:	KANJI
-reserved:	KEEP
-reserved:	KEPT
 reserved:	KEY
 reserved:	KEYBOARD
 reserved:	LABEL
-reserved:	LABEL-RETURN
 reserved:	LAST
-reserved:	LD
 reserved:	LEADING
 reserved:	LEAVE
 reserved:	LEFT
@@ -395,7 +294,6 @@ reserved:	LEFT-JUSTIFY
 reserved:	LENGTH
 reserved:	LENGTH-CHECK=FULL
 reserved:	LESS
-reserved:	LIKE
 reserved:	LIMIT
 reserved:	LIMITS
 reserved:	LIN
@@ -405,15 +303,11 @@ reserved:	LINE
 reserved:	LINE-COUNTER
 reserved:	LINES
 reserved:	LINKAGE
-reserved:	LOCAL-STORAGE
-reserved:	LOCALLY
 reserved:	LOCK
 reserved:	LOW-VALUE
 reserved:	LOW-VALUES=LOW-VALUE
 reserved:	LOWLIGHT
 reserved:	MANUAL
-reserved:	MASTER-INDEX
-reserved:	MEMBER
 reserved:	MEMORY
 reserved:	MERGE
 reserved:	MESSAGE
@@ -421,14 +315,11 @@ reserved:	META-CLASS
 reserved:	METHOD
 reserved:	METHOD-ID
 reserved:	MODE
-reserved:	MODIFIED
-reserved:	MODIFY
 reserved:	MODULES
 reserved:	MORE-LABELS
 reserved:	MOVE
 reserved:	MULTIPLE
 reserved:	MULTIPLY
-reserved:	NAME
 reserved:	NAMED
 reserved:	NATIVE
 reserved:	NEGATIVE
@@ -436,11 +327,8 @@ reserved:	NEXT
 reserved:	NO
 reserved:	NO-ECHO
 reserved:	NOMINAL
-reserved:	NONE
-reserved:	NORMAL
 reserved:	NOT
 reserved:	NOTE
-reserved:	NSTD-REELS
 reserved:	NULLS=NULL
 reserved:	NULL
 reserved:	NUMBER
@@ -453,7 +341,6 @@ reserved:	OF
 reserved:	OFF
 reserved:	OMITTED
 reserved:	ON
-reserved:	ONLY
 reserved:	OPEN
 reserved:	OPTIONAL
 reserved:	OR
@@ -464,13 +351,10 @@ reserved:	OTHERWISE
 reserved:	OUTPUT
 reserved:	OVERFLOW
 reserved:	OVERRIDE
-reserved:	OWNER
 reserved:	PACKED-DECIMAL
 reserved:	PADDING
 reserved:	PAGE
 reserved:	PAGE-COUNTER
-reserved:	PALETTE
-reserved:	PARAGRAPH
 reserved:	PASSWORD
 reserved:	PERFORM
 reserved:	PF
@@ -482,9 +366,6 @@ reserved:	POINTER
 reserved:	POSITION
 reserved:	POSITIONING
 reserved:	POSITIVE
-reserved:	PRESENT
-reserved:	PREVIOUS
-reserved:	PRINT-SWITCH
 reserved:	PRINTER
 reserved:	PRINTER-1
 reserved:	PRINTING
@@ -493,12 +374,10 @@ reserved:	PROCEDURE
 reserved:	PROCEDURE-POINTER
 reserved:	PROCEDURES
 reserved:	PROCEED
-reserved:	PROCESS
 reserved:	PROCESSING
 reserved:	PROGRAM
 reserved:	PROGRAM-ID
 reserved:	PROMPT
-reserved:	PROTECTED
 reserved:	PURGE
 reserved:	QUEUE
 reserved:	QUOTE
@@ -508,11 +387,8 @@ reserved:	RANGE
 reserved:	RD
 reserved:	READ
 reserved:	READY
-reserved:	REALM
 reserved:	RECEIVE
-reserved:	RECONNECT
 reserved:	RECORD
-reserved:	RECORD-NAME
 reserved:	RECORD-OVERFLOW
 reserved:	RECORDING
 reserved:	RECORDS
@@ -521,7 +397,6 @@ reserved:	REDEFINES
 reserved:	REEL
 reserved:	REFERENCE
 reserved:	REFERENCES
-reserved:	RELATION
 reserved:	RELATIVE
 reserved:	RELEASE
 reserved:	RELOAD
@@ -530,7 +405,6 @@ reserved:	REMARKS
 reserved:	REMOVAL
 reserved:	RENAMES
 reserved:	REORG-CRITERIA
-reserved:	REPEATED
 reserved:	REPLACED
 reserved:	REPLACING
 reserved:	REPORT
@@ -542,8 +416,6 @@ reserved:	REREAD
 reserved:	RERUN
 reserved:	RESERVE
 reserved:	RESET
-reserved:	RETAINING
-reserved:	RETRIEVAL
 reserved:	RETURN
 reserved:	RETURN-CODE
 reserved:	RETURNING
@@ -556,7 +428,6 @@ reserved:	RH
 reserved:	RIGHT
 reserved:	RIGHT-JUSTIFY
 reserved:	ROLLBACK
-reserved:	ROLLING
 reserved:	ROUNDED
 reserved:	RUN
 reserved:	SAME
@@ -571,16 +442,13 @@ reserved:	SEGMENT
 reserved:	SEGMENT-LIMIT
 reserved:	SELECT
 reserved:	SELECTIVE
-reserved:	SELF
 reserved:	SEND
 reserved:	SENTENCE
 reserved:	SEPARATE
 reserved:	SEQUENCE
 reserved:	SEQUENTIAL
 reserved:	SERVICE
-reserved:	SESSION-ID
 reserved:	SET
-reserved:	SHARED
 reserved:	SHIFT-IN
 reserved:	SHIFT-OUT
 reserved:	SIGN
@@ -605,20 +473,13 @@ reserved:	SPECIAL-NAMES
 reserved:	STANDARD
 reserved:	STANDARD-1
 reserved:	STANDARD-2
-reserved:	STANDARD-3
-reserved:	STANDARD-4
 reserved:	START
-reserved:	STARTING
 reserved:	STATUS
 reserved:	STOP
-reserved:	STORE
 reserved:	STRING
 reserved:	SUB-QUEUE-1
 reserved:	SUB-QUEUE-2
 reserved:	SUB-QUEUE-3
-reserved:	SUB-SCHEMA
-reserved:	SUBFILE
-reserved:	SUBPROGRAM
 reserved:	SUBTRACT
 reserved:	SUM
 reserved:	SUPER
@@ -630,7 +491,6 @@ reserved:	TABLE
 reserved:	TALLY
 reserved:	TALLYING
 reserved:	TAPE
-reserved:	TENANT
 reserved:	TERMINAL
 reserved:	TERMINATE
 reserved:	TEST
@@ -655,13 +515,10 @@ reserved:	TRACK-LIMIT
 reserved:	TRACKS
 reserved:	TRAILING
 reserved:	TRAILING-SIGN
-reserved:	TRANSACTION
-reserved:	TRANSCEIVE
 reserved:	TRANSFORM
 reserved:	TRUE
 reserved:	TYPE
 reserved:	UNDERLINE
-reserved:	UNEQUAL
 reserved:	UNIT
 reserved:	UNLOCK
 reserved:	UNSTRING
@@ -670,21 +527,14 @@ reserved:	UP
 reserved:	UPDATE
 reserved:	UPON
 reserved:	USAGE
-reserved:	USAGE-MODE
 reserved:	USE
-reserved:	USER
 reserved:	USING
-reserved:	VALID
-reserved:	VALIDATE
 reserved:	VALUE
 reserved:	VALUES=VALUE
-reserved:	VARIABLES
 reserved:	VARYING
-reserved:	WAIT
 reserved:	WHEN
 reserved:	WHEN-COMPILED
 reserved:	WITH
-reserved:	WITHIN
 reserved:	WORDS
 reserved:	WORKING-STORAGE
 reserved:	WRITE
@@ -719,14 +569,10 @@ register:	WHEN-COMPILED
 
 
 # list of system names:
-system-name:	UPSI-0
-system-name:	UPSI-1
-system-name:	UPSI-2
-system-name:	UPSI-3
-system-name:	UPSI-4
-system-name:	UPSI-5
-system-name:	UPSI-6
-system-name:	UPSI-7
+not-system-name:	DIALECT-ALL-SWITCHES
+not-system-name:	S03
+not-system-name:	S04
+not-system-name:	S05
 
 
 # disable all functions
