@@ -1,4 +1,8 @@
 
+2019-09-30  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y, reserved.c: added more (D)OS/VS and ACUCOBOL APPLY phrases.
+
 2019-09-29  Edward Hart <edward.dan.hart@gmail.com>
 
 	* parser.y, reserved.c: added detection of OS/VS-era I/O extensions.
